--- a/news/app/src/main/res/values/strings.xml
+++ b/news/app/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="action_example">Example action</string>
 
     <string name="action_settings">Settings</string>
+    <string name="title_activity_pdf">PdfActivity</string>
 </resources>
